Fixes spacing around hamburger menu

--- a/resources/public/css/MisAbogados.css
+++ b/resources/public/css/MisAbogados.css
@@ -233,6 +233,10 @@ p {
     padding-top: 15px;
   }
 
+  .navbar-ctl li:last-of-type {
+    margin-right: 0px;
+  }
+
   .navbar-ctl a {
     color: #FFFFFF !important;
     font-size: 18px;
@@ -356,7 +360,7 @@ p {
 
 .navbar-toggle {
   margin-right: 5px;
-  margin-left: 5px;
+  margin-left: 20px;
 }
 
 @media (max-width: 1010px) {
